--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "next",
     "redux": "^3.7.0",
     "redux-form": "^6.8.0",
     "redux-logger": "^3.0.6",
