--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React redux boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
     "start": "./node_modules/.bin/webpack-dev-server --inline --hot"
   },
   "author": "Matthew Gordon <laxredemption5525@gmail.com>",
@@ -15,7 +15,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^2.9.1",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^15.6.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.2.3",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
