--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "./node_modules/.bin/webpack-dev-server --inline --hot"
+    "test:dev": "jest --watchAll",
+    "coverage": "jest --coverage",
+    "update": "jest -- -u",
+    "dev": "./node_modules/.bin/webpack-dev-server --inline --hot"
   },
   "author": "Matthew Gordon <laxredemption5525@gmail.com>",
   "license": "MIT",
